<resources>
    <string name="app_name">S-Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Cart</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="web_client_id">51514213424-44stl8j3i7ntigqeaq3idsbnviigg1hl.apps.googleusercontent.com</string>
    <string name="menu_products">Products</string>
    <string name="image_base_url">https://s-api.caucalamdev.io.vn/file/image/</string>
    <string name="menu_order_history">Order History</string>
</resources>