<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_products">

    <fragment
            android:id="@+id/nav_products"
            android:name="com.example.s_store.ui.products.ProductsFragment"
            android:label="@string/menu_products"
            tools:layout="@layout/fragment_products" />
    <fragment
            android:id="@+id/nav_cart"
            android:name="com.example.s_store.ui.cart.CartFragment"
            android:label="@string/menu_cart"
            tools:layout="@layout/fragment_cart" />
    <fragment
            android:id="@+id/nav_history"
            android:name="com.example.s_store.ui.history.HistoryFragment"
            android:label="@string/menu_order_history"
            tools:layout="@layout/fragment_history" />
</navigation>